@@ -1,3 +1,7 @@
+2004-02-20  ujwal
+
+	* Minor updates to selection stuff. Re-enabled "select all".
+
 2004-02-19  fabian
 
 	* Testing new hashing algorithm
